# Zephyr_Cruise_Control

./: CMakeLists.txt  README.md  prj.conf
boards/: esp32_devkit_wroom.overlay
cruise_control/: CMakeLists.txt  prj.conf
cruise_control/boards/: esp32_devkit_wroom.overlay
cruise_control/src/: main.c
cruise_control/src/can/: can.c  can.h
cruise_control/src/control/: encoder.c  encoder.h  motor.c  motor.h  moving_avg.c  pid.c  pid.h
diagram/: Basic_Cruise_Control.drawio
dts/bindings/: cruise,motor.yaml
interface/: CMakeLists.txt  prj.conf
interface/boards/: esp32_devkit_wroom.overlay
interface/dts/bindings/: cruise,motor.yaml
interface/src/: main.c
interface/src/can/: can.c  can.h
interface/src/serial/: serial_handler.c  serial_handler.h
src/: main.c  motor.c  motor.h  pid.c  pid.h  serial_handler.c  serial_handler.h  signal_capture.c  signal_capture.h
src/control/: motor.c  motor.h  moving_avg.h  pid.c  pid.h
src/serial/: serial_handler.c
